crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_quoted_gt_multiline_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..65
  HTML_BLOCK_RAW@0..38
    HTML_BLOCK_TAG@0..5
      TEXT@0..4 "<DIV"
      NEWLINE@4..5 "\n"
    HTML_BLOCK_TAG@5..38
      TEXT@5..37 "  _bad=\"x\" id=\"hidden ..."
      NEWLINE@37..38 "\n"
  PARAGRAPH@38..65
    TEXT@38..42 "b\"/>"
    STRONG@42..54
      STRONG_MARKER@42..44 "**"
      TEXT@44..52 "Outside."
      STRONG_MARKER@52..54 "**"
    NEWLINE@54..55 "\n"
    TEXT@55..64 "next line"
    NEWLINE@64..65 "\n"
